# napari-slstr

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
resources/: example.cfg  example_label_layers.cfg  example_slstr_lite.cfg
src/napari_netcdf/: netcdf_viewer.py
src/napari_slstr/: image_labeller.py
