[metadata]
name = napari_slstr
version = attr: napari_slstr.VERSION
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Launch napari to view and label SLSTR scenes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/napari-slstr
project_urls =
    Bug Tracker = https://github.com/surftemp/napari-slstr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    napari[all]
    xarray
    netcdf4

[options.entry_points]
console_scripts =
    image_labeller = napari_slstr.image_labeller:main

[options.packages.find]
where = src
